Prep for 4.2.8 release

--- a/source/changelogs/v4.2.8.rst
+++ b/source/changelogs/v4.2.8.rst
@@ -1,7 +1,7 @@
 Version 4.2.8
 #############
 
-Release Date: Unreleased
+Release Date: October 30, 2022
 
 **4.2.8 release of CodeIgniter4**
 
@@ -13,6 +13,7 @@ BREAKING
 ********
 
 none.
+
 Enhancements
 ************
 
