--- a/source/changelogs/v4.3.0.rst
+++ b/source/changelogs/v4.3.0.rst
@@ -299,6 +299,7 @@ Deprecations
 - ``CodeIgniter::$path`` and ``CodeIgniter::setPath()`` are deprecated. No longer used.
 - The public property ``IncomingRequest::$uri`` is deprecated. It will be protected. Use ``IncomingRequest::getUri()`` instead.
 - The public property ``IncomingRequest::$config`` is deprecated. It will be protected.
+- The method ``CLI::isWindows()`` is deprecated. Use ``is_windows()`` instead.
 
 Bugs Fixed
 **********
