docs: update docs

--- a/source/changelogs/v4.3.0.rst
+++ b/source/changelogs/v4.3.0.rst
@@ -27,6 +27,7 @@ Exceptions when Database Errors Occur
 
 - The exceptions thrown by the database connection classes have been changed to ``CodeIgniter\Database\Exceptions\DatabaseException``. Previously, different database drivers threw different exception classes, but these have been unified into ``DatabaseException``.
 - The exceptions thrown by the ``execute()`` method of Prepared Queries have been changed to ``DatabaseException``. Previously, different database drivers might throw different exception classes or did not throw exceptions, but these have been unified into ``DatabaseException``.
+- During transactions, exceptions are not thrown by default even if ``DBDebug`` is true.
 - ``DBDebug`` and ``CI_DEBUG`` Changes
 
     - To be consistent in behavior regardless of environments, ``Config\Database::$default['DBDebug']``
@@ -38,11 +39,10 @@ Exceptions when Database Errors Occur
     - The default value of ``BaseConnection::$DBDebug`` has been changed to ``true``.
     - With these changes, ``DBDebug`` **now means whether or not to throw an exception when an error occurs**.
       Although unrelated to debugging, the name has not been changed.
-    - When running transactions with ``DBDebug`` is ``true``, if a query error occurs, all the queries
-      will be rolled backed, and an exception will be thrown. :ref:`transactions-managing-errors` or
-      :ref:`transactions-manual-transactions` won't work. This is no different from previous versions,
-      but changing the ``DBDebug`` setting from the previous default value to ``true`` will change the
-      behavior in the production environment.
+    - When running transactions with ``DBDebug`` is ``true``, even if a query error occurs, exceptions
+      are not thrown by default. Previously, if a query error occurs, all the queries
+      will be rolled backed, and an exception will be thrown, so :ref:`transactions-managing-errors` or
+      :ref:`transactions-manual-transactions` won't work.
     - Now when you delete without WHERE clause in ``Model``, ``DatabaseException`` is thrown even if
       ``CI_DEBUG`` is false. Previously, it is thrown if ``CI_DEBUG`` is true.
 
