docs: add note for Auto Routing (Improved) changes

--- a/source/changelogs/v4.2.0.rst
+++ b/source/changelogs/v4.2.0.rst
@@ -60,6 +60,8 @@ Behavior Changes
 Enhancements
 ************
 
+.. _v420-new-improved-auto-routing:
+
 New Improved Auto Routing
 =========================
 
