Prep for 4.3.1 release

--- a/source/changelogs/v4.3.1.rst
+++ b/source/changelogs/v4.3.1.rst
@@ -1,7 +1,7 @@
 Version 4.3.1
 #############
 
-Release Date: Unreleased
+Release Date: January 14, 2023
 
 **4.3.1 release of CodeIgniter4**
 
@@ -9,20 +9,14 @@ Release Date: Unreleased
     :local:
     :depth: 3
 
-BREAKING
-********
-
-Message Changes
-***************
-
-Changes
-*******
-
-Deprecations
-************
-
 Bugs Fixed
 **********
+
+* Fixed: some environment variable (**.env**) values were not reflected in Email Config
+* Fixed: TypeError in Validation ``is_unique`` and ``is_not_unique``
+* Fixed: revert method name ``BaseBuilder::resetQuery()`` changed accidentally
+* Fixed: handling float in Validation Strcit Rules (``greater_than``, ``greater_than_equal_to``, ``less_than``, ``less_than_equal_to``)
+* Fixed: missing instruction for ``Config\Exceptions`` in PHP 8.2 in the user guide
 
 See the repo's
 `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_
