docs: add about missing Errors.php lang file

--- a/source/changelogs/v4.3.0.rst
+++ b/source/changelogs/v4.3.0.rst
@@ -335,6 +335,7 @@ Message Changes
 
 - Updated English language strings to be more consistent.
 - Added ``CLI.generator.className.cell`` and ``CLI.generator.viewName.cell``.
+- Added **en/Errors.php** file.
 
 Changes
 *******
