--- a/source/changelogs/v4.0.5.rst
+++ b/source/changelogs/v4.0.5.rst
@@ -12,9 +12,9 @@ Release Date: January 31, 2021
 Enhancements
 ------------
 
-- New URL helper function ``url_to()`` which creates absolute URLs based on controllers.
+- New URL helper function :php:func:`url_to()` which creates absolute URLs based on controllers.
 - New Model option: ``$useAutoIncrement`` which when set to ``false`` allows you to provide your own primary key for each record in the table. Handy when we want to implement 1:1 relation or use UUIDs for our model.
-- New URL helper function ``url_is()`` which allows you to check the current URL to see if matches the given string.
+- New URL helper function :php:func:`url_is()` which allows you to check the current URL to see if matches the given string.
 - Services now have their config parameters strictly typehinted. This will ensure no one will pass a different config instance. If you need to pass a new config with additional properties, you need to extend that particular config.
 - Support for setting SameSite attribute on Session and CSRF cookies has been added. For security and compatibility with latest browser versions, the default setting is ``Lax``.
 - Guessing file extensions from mime type in ``Config\Mimes::guessExtensionFromType`` now only reverse searches the ``$mimes`` array if no extension is proposed (i.e., usually not for uploaded files).
