--- a/source/changelogs/v4.0.5.rst
+++ b/source/changelogs/v4.0.5.rst
@@ -18,7 +18,7 @@ Enhancements
 - Services now have their config parameters strictly typehinted. This will ensure no one will pass a different config instance. If you need to pass a new config with additional properties, you need to extend that particular config.
 - Support for setting SameSite attribute on Session and CSRF cookies has been added. For security and compatibility with latest browser versions, the default setting is ``Lax``.
 - Guessing file extensions from mime type in ``Config\Mimes::guessExtensionFromType`` now only reverse searches the ``$mimes`` array if no extension is proposed (i.e., usually not for uploaded files).
-- The getter functions for file extensions of uploaded files now have different fallback values (``$this->getClientExtension()`` for ``UploadedFile->getExtension()`` and ``''`` for ``UploadedFile->guessExtension()``). This is a security fix and makes the process less dependent on the client.
+- The getter functions for file extensions of uploaded files now have different fallback values (``UploadedFile::getClientExtension()`` for ``UploadedFile::getExtension()`` and ``''`` for ``UploadedFile::guessExtension()``). This is a security fix and makes the process less dependent on the client.
 - The Cache ``FileHandler`` now allows setting the file permissions mode via ``Config\Cache``.
 
 Changes
