docs: add support for PHP 8.2

--- a/source/changelogs/v4.2.11.rst
+++ b/source/changelogs/v4.2.11.rst
@@ -23,6 +23,11 @@ BREAKING
   :ref:`sessions-memcachedhandler-driver` and :ref:`sessions-redishandler-driver`
   has changed. See :ref:`Upgrading Guide <upgrade-4211-session-key>`.
 
+Enhancements
+************
+
+- Full support for PHP 8.2.
+
 Bugs Fixed
 **********
 
