--- a/source/changelogs/v4.2.10.rst
+++ b/source/changelogs/v4.2.10.rst
@@ -14,4 +14,6 @@ Bugs Fixed
 
 - Fixed incorrect PHPDoc types in Session.
 
-See the repo's `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_ for a complete list of bugs fixed.
+See the repo's
+`CHANGELOG_4.2.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/changelogs/CHANGELOG_4.2.md>`_
+for a complete list of bugs fixed.
