--- a/source/changelogs/v4.2.12.rst
+++ b/source/changelogs/v4.2.12.rst
@@ -17,4 +17,6 @@ Bugs Fixed
 - Fixed ``spark migrate:status`` shows incorrect filenames when format is ``Y_m_d_His_``.
 - Fixed an error when ``Model::save()`` saves an object if ``$useAutoIncrement`` is false.
 
-See the repo's `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_ for a complete list of bugs fixed.
+See the repo's
+`CHANGELOG_4.2.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/changelogs/CHANGELOG_4.2.md>`_
+for a complete list of bugs fixed.
