--- a/source/changelogs/v4.2.5.rst
+++ b/source/changelogs/v4.2.5.rst
@@ -25,4 +25,6 @@ Bugs Fixed
 **********
 - When using subqueries in the main query, prefixes are added to the table alias.
 
-See the repo's `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_ for a complete list of bugs fixed.
+See the repo's
+`CHANGELOG_4.2.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/changelogs/CHANGELOG_4.2.md>`_
+for a complete list of bugs fixed.
