--- a/source/changelogs/v4.2.9.rst
+++ b/source/changelogs/v4.2.9.rst
@@ -16,4 +16,6 @@ Bugs Fixed
 
 - Fixed a bug that causes `PHP Fatal error:  Trait "Nexus\PHPUnit\Extension\Expeditable" not found` when running PHPUnit.
 
-See the repo's `CHANGELOG.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/CHANGELOG.md>`_ for a complete list of bugs fixed.
+See the repo's
+`CHANGELOG_4.2.md <https://github.com/codeigniter4/CodeIgniter4/blob/develop/changelogs/CHANGELOG_4.2.md>`_
+for a complete list of bugs fixed.
