--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -63,6 +63,7 @@ Others
 - **Auto Routing (Improved)**: Now you can use URI without a method name like
   ``product/15`` where ``15`` is an arbitrary number.
   See :ref:`controller-default-method-fallback` for details.
+- **Filters:** Now you can use Filter Arguments with :ref:`$filters property <filter-arguments-filters>`.
 
 Message Changes
 ***************
