fix:Modify changelogs/v4.4.0.rst description and remove the numberNative attribute from the $test array in app/Config/Database.php

--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -59,7 +59,7 @@ Forge
 Others
 ------
 
-- **Database:** Added the ``numberNative`` attribute to the Database Config for MySQLi to keep the variable type obtained after SQL Query consistent with the type set in the database.
+- **MySQLi:** Added the ``numberNative`` attribute to the Database Config to keep the variable type obtained after SQL Query consistent with the type set in the database.
   See :ref:`Database Configuration <database-configuration-explanation-of-values>`.
 
 Model
