docs: add deprecation

--- a/source/changelogs/v4.3.6.rst
+++ b/source/changelogs/v4.3.6.rst
@@ -48,6 +48,9 @@ Changes
 Deprecations
 ************
 
+- **AutoRouterImproved:** The constructor parameter ``$httpVerb`` is deprecated.
+  No longer used.
+
 Bugs Fixed
 **********
 
